--- a/abc.css
+++ b/abc.css
@@ -1,34 +1,32 @@
-/* Reset some default styles */
+
 body, h1, h2, h3, p, ul {
     margin: 0;
     padding: 0;
 }
 
-/* General styles */
-body {
-    font-family: Arial, sans-serif;
-    color: #333;
-    line-height: 1.6;
-}
 
 header {
-    background: #004d99;
+    background: #0a0a0af2;
     color: white;
     padding: 20px 0;
     display: flex;
+    width: 99%;
+    margin: auto;
+    
     justify-content: space-around;
 }
 
 header .logo {
     display: inline-block;
     padding: 0 20px;
+    width: 50%;
 }
 .logo img{
     width: 20%;
 }
 header nav {
     display: inline-block;
-    width: 60%;
+    width: 50%;
     padding: 20px;
 }
 
@@ -42,18 +40,20 @@ header nav ul li {
     margin-left: 15px; 
      padding: 20px;
     margin: auto;
+    font-size: 22px
 }
 
 header nav ul li a {
-    color:rgb(231, 123, 123);
+    color:rgb(215, 111, 111);
     text-decoration: none;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .hero {
     width: 100%;
     margin-top: 10px;
     background-size: cover;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
 }
 .hero img{
     width: 100%;
@@ -83,9 +83,9 @@ button{
  .bank{
     text-align: center;
      margin-top: 20px;
-     border: red;
+ 
      margin: auto;
-     width: 60%;
+     width: 100%;
      height: 200px;
   border: 1px solid rgb(18, 5, 2);
      box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
@@ -106,12 +106,12 @@ label{
 
 #bank{
     margin: auto;
-    width: 60%;
+    width: 33%;
     position: absolute;
-    top:66%;
-    left:49.7%;
+    top:65%;
+   right: 2.2%;
     color: rgb(100, 4, 4);
-    /* border: 1px solid blue; */
+    border: 1px solid blue;
 }
 footer {
     background: #333;
@@ -121,5 +121,7 @@ footer {
     position: fixed;
     bottom: 0;
     margin-top: 10px;
+  
     width: 100%;
+    margin: auto;
 }
